fix: delet history navigation removed because url tab isn't hidde on mobile version on scroll down. show commit 780ca5b06da612ec9c59d28388a52f7ff13730f2

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -5,11 +5,6 @@
 @import "typography";
 
 html {
-  overscroll-behavior: none;
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
   -ms-overflow-style: none; /* IE 11 */
@@ -21,11 +16,6 @@ html {
 }
 
 body {
-  overscroll-behavior: none;
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
   font-weight: normal;
